<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/clear_feature"
    app:showAsAction="always"
    android:title="@string/clear_all"
    android:icon="@drawable/ic_delete_black_24dp"></item>

    <item
        android:id="@+id/previous_data"
        app:showAsAction="always"
        android:title="@string/prev"
        android:icon="@drawable/ic_keyboard_arrow_left_black_24dp"></item>

    <item
        android:id = "@+id/next_data"
        app:showAsAction="always"
        android:title="@string/next"
        android:icon="@drawable/ic_keyboard_arrow_right_black_24dp"></item>

    <item
        android:id = "@+id/voice_numbers"
        app:showAsAction = "always"
        android:title="@string/voice"
        android:icon="@drawable/ic_record_voice_over_black_24dp"></item>

    <item
        android:id = "@+id/info"
        app:showAsAction = "always"
        android:title = "@string/app_info"
        android:icon="@drawable/ic_info_black_24dp"></item>

</menu>